2010-08-03 Raphael Neider <rneider AT web.de>

	* device/include/pic16/stdio.h,
	* device/lib/pic16/libc/stdio/putchar.c: resurrect PUTCHAR macro,
	  fixes #3038656

2010-08-03 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/peeph.def: fixed bug #3038728 (consecutive &=
	  on volatile variable)

2010-08-03 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c (genDataPointerSet): properly determine operand size,
	  fixes #3038372

2010-08-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (genCast),
	* src/mcs51/gen.c (genCast): always copy the pointer
	* src/hc08/gen.c: cosmetic changes
	* src/SDCCast.h: added checkPtrCast
	* src/SDCCicode.c (geniCodeCast),
	* src/SDCCast.c (checkPtrCast): factored out of geniCodeCast,
	  (decorateType CAST): check pointer casts
	* src/SDCCerr.c,
	* src/SDCCerr.h: changed error E_CANNOT_USE_GENERIC_POINTER to warning
	  W_USING_GENERIC_POINTER
	* src/SDCCglue.c (aopLiteralLong): moved check to decorateType,
	  (pointerTypeToGPByte): exit on internal error, return -1 for GPTR warning
	  (_printPointerType): handle 4 byte pointers,
	  (printGPointerType): copy whole generic pointer when warned
	* support/regression/tests/bug3027957.c (correct): added for bug 3034400

2010-08-02 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/z80.src/inst.cc:
	  Fixed #2801879.
	* support/regression/tests/bug2862650.c:
	  Improved redundancy.

2010-08-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCicode.c (ast2iCode): fixed bug 1962613
	* support/regression/tests/bug1962613.c: new, added
	* src/SDCCsymt.c (compareTypeExact): fixed the fix for bug 1929140
	* support/regression/tests/bug1115321.c: fixed next problem on solaris

2010-08-01 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug2862650.c:
	  Redundant regression test for #2862650.

2010-08-01 Borut Razem <borut.razem AT siol.net>

	* device/include/ds80c390.h, device/include/tinibios.h,